<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddLogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

            <TextView
                android:id="@+id/fragmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_log_fragment_name"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toTopOf="@+id/titleField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/titleField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@+id/descriptionField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/fragmentName" />

            <EditText
                android:id="@+id/descriptionField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintBottom_toTopOf="@+id/ratingSeekBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/titleField" />


            <SeekBar
                android:id="@+id/ratingSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:max="9"
                android:progress="4"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toTopOf="@+id/addLogMapView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/descriptionField" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <Button
                android:id="@+id/addLogBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/add_log_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/titleLabel"
                android:labelFor="@id/titleField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleField"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:labelFor="@id/descriptionField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/descriptionField"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ratingLabel"
                android:labelFor="@id/ratingSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_label_initial"
                app:layout_constraintBottom_toBottomOf="@+id/ratingSeekBar"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingSeekBar" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/addLogMapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.4"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                app:layout_constraintBottom_toTopOf="@id/thumbnailsRecyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingSeekBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thumbnailsRecyclerView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addLogMapView"
                app:layout_constraintBottom_toTopOf="@id/addPhotosBtn"/>

            <Button
                android:id="@+id/addPhotosBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_photos"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thumbnailsRecyclerView"
                app:layout_constraintBottom_toTopOf="@id/addLogBtn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>